<resources>
    <string name="app_name">GB_Translator</string>
    <string name="description_rv">Description</string>
    <string name="header_rv">Header</string>
    <string name="transcription">Transcription</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="error_empty_response">Response from server is empty</string>
    <string name="error_undefined">Undefined error</string>
    <string name="search_hint">Search</string>
    <string name="delete_description">X</string>
    <string name="dialog_tittle_sorry">Sorry</string>
    <string name="empty_server_response_on_success">Couldn\'t find any definitions</string>
    <string name="error_stub">Error</string>
    <string name="menu_title_history">History</string>
    <string name="title_historyscreen">History screen feature</string>
    <string name="dialog_message_device_is_offline">ou can not use app without internet connection. Please, check internet connection.</string>
    <string name="no_internet_description">No internet connection</string>
    <string name="internet_settings">Internet Settings</string>
</resources>